--- a/index.html
+++ b/index.html
@@ -152,6 +152,49 @@
   </div>
 </section>
 
+  <section class="contact-section" id="contact">
+    <h2><i class="fas fa-envelope-open-text"></i> Contact Us</h2>
+    <p>Have questions about our cars or services? Get in touch below.</p>
+
+    <form class="contact-form">
+      <div class="form-group">
+        <i class="fas fa-user"></i>
+        <input type="text" name="name" placeholder="Your Name" required />
+      </div>
+
+      <div class="form-group">
+        <i class="fas fa-envelope"></i>
+        <input type="email" name="email" placeholder="Your Email" required />
+      </div>
+
+      <div class="form-group">
+        <i class="fas fa-comment"></i>
+        <textarea name="message" rows="5" placeholder="Your Message" required></textarea>
+      </div>
+
+      <button type="submit"><i class="fas fa-paper-plane"></i> Send Message</button>
+    </form>
+  </section>
+  <section class="delivery-section" id="delivery">
+  <div class="delivery-container">
+    <div class="delivery-text">
+      <h2><i class="fas fa-truck-fast"></i> Fast & Secure Delivery</h2>
+      <p>
+        We deliver your dream car right to your doorstep—safely, quickly, and hassle-free.
+        Track your car in real time and choose a delivery time that fits your schedule.
+      </p>
+      <ul>
+        <li><i class="fas fa-check-circle"></i> Nationwide Delivery</li>
+        <li><i class="fas fa-check-circle"></i> Real-time Tracking</li>
+        <li><i class="fas fa-check-circle"></i> Guaranteed Safety</li>
+      </ul>
+      <a href="#contact" class="delivery-btn"><i class="fas fa-phone-alt"></i> Schedule Delivery</a>
+    </div>
+    <div class="delivery-image">
+      <img src="delivery-staff-transport-truck-home-600nw-2226244465.webp" alt="Car Delivery" />
+    </div>
+  </div>
+</section>
 
  <section class="reviews">
   <h2>Customer Reviews</h2>
