--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
   <nav class="nav">
     <a href="#Home">Home</a>
     <a href="#Explore">Explore cars</a>
-    <a href="#Help">Help center</a>
-    <a href="#">Pages</a>
+    <a href="#delivery">Delivery</a>
+    <a href="#contact">Contact Us</a>
   </nav>
 
   <div class="header-actions">
@@ -34,8 +34,8 @@
   <div class="mobile-menu" id="mobileMenu">
     <a href="#Home">Home</a>
     <a href="#Explore">Explore cars</a>
-    <a href="#Help">Help center</a>
-    <a href="#">Pages</a>
+    <a href="#delivery">Delivery</a>
+    <a href="#contact">Contact Us</a>
     <button class="btn-primary">Explore cars</button>
   </div>
 </header>
